--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-calendar": "^5.1.0",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.5",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -45,6 +46,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@types/react-transition-group": "^4.4.11"
   }
 }
